added code attribution and home content

--- a/week-9/bobs-computers/src/app/home/home.component.html
+++ b/week-9/bobs-computers/src/app/home/home.component.html
@@ -1,1 +1,28 @@
-<p>home works!</p>
+<div fxLayout="row wrap">
+  <div fxFlex>
+    <div fxLayout="column" class="bob-image">
+      <div>
+        <img src="../../assets/bob-working.jpg">
+      </div>
+      <div>
+        <em>
+          Photo from
+          <a class="attribution-link" href="https://pixabay.com/photos/technician-repairing-repairman-5508210/" target="_blank">pixabay</a>
+        </em>
+      </div>
+    </div>
+  </div>
+
+  <div fxFlex class="bob-about">
+    <h1>A little history</h1>
+    <p>
+      Bob and his talented staff of computer repair technicians have been tinkering with computers since the very beginning. Bob was a summer intern with Charles
+      Babbage, and later went on to work with Alan Turing. He's familiar with all types of computer systems, from mechanical calculating machines all the way up
+      to the latest and greatest technology.
+    </p>
+    <p>
+      Bob scoured the world for the best technicians to hire. He sought people who were at the top of their field and recruited them to work in his Bellevue,
+      Nebraska shop. He has managed to amass one of the greatest collections of repair talent anywhere in the world.
+    </p>
+    </div>
+</div>
