--- a/week-9/bobs-computers/src/app/invoice-dialog/invoice-dialog.component.html
+++ b/week-9/bobs-computers/src/app/invoice-dialog/invoice-dialog.component.html
@@ -2,15 +2,18 @@
   <h2>Your Invoice</h2>
   <mat-card>
     <mat-card-content>
+      <h2>Invoice Generated on {{ invoiceDate | date: 'short' }}</h2>
     <h3>Standard Services:</h3>
     <p *ngFor="let item of checkedItems">
       {{ item.label }}
     </p>
+    <hr>
     <h3>Standard Fees:</h3>
     <p>Parts Price: ${{partsPrice | number: '1.2' }}
     </p>
-    <p>Labor Total (@ $50/hour): ${{ laborHours * 50 | number: '1.2' }}
+    <p>Labor Total (@ $50/hour): ${{ laborHours * 50 | number: '1.2' }} ({{ laborHours }} hours labor)
     </p>
+    <hr>
     <h2>Your Total: ${{ invoiceTotal | number: '1.2' }}</h2>
     </mat-card-content>
   </mat-card>
